FIX: slider input needs z-index for Chrome (#161)

--- a/assets/stylesheets/common/discourse-calendar.scss
+++ b/assets/stylesheets/common/discourse-calendar.scss
@@ -272,6 +272,7 @@ a.holiday {
   position: relative;
   box-sizing: border-box;
   background-color: transparent;
+  z-index: 1;
   &::before {
     background: var(--tertiary);
     content: "";
